--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "angular-ui-router": "~0.3",
         "d3": "~3",
         "hammerjs": "~2.0.4",
-        "jquery-ui": "~1.10.3",
+        "jquery-ui": "^1.12",
         "jquery": "~2.1",
         "crypto-js": "3.1.2",
         "jsrsasign": "~4.8",
